--- a/cart.html
+++ b/cart.html
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='price.css'>
-    <script src='cart.js'></script>
-</head>
-<body>
-     <div class="navbar">
-  
-<a href="#home" class="active">Home</a>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
 
-</div>
-</body>
+    <link rel="stylesheet" type="text/css" media="screen" href="price.css" />
+  </head>
+  <body>
+    <div class="navbar">
+      <a
+        href="#news"
+        class="add"
+        data-bs-toggle="modal"
+        data-bs-target="#addFood"
+        disabled
+        >Add</a
+      >
+      <a href="./cart.html" class="active">Cart</a>
+      <a href="./index.html">Home</a>
+    </div>
+
+    <div class="cartItems"></div>
+    <script src="cart.js"></script>
+  </body>
 </html>
