--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <div class="navbar">
   
   <a href="#news" class="add " data-bs-toggle="modal" data-bs-target="#addFood">Add</a>
+  <a href="./cart.html">Cart</a>
+  <a href="./index.html" class="">Home</a>
 </div>
 
   <h1> Food Store</h1>
