--- a/index.html
+++ b/index.html
@@ -1,59 +1,201 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>African dish store</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='price.css'>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-</head>
-<body>
-  <!-- nav bar -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./price.css" />
+    <script
+      src="https://kit.fontawesome.com/6dcbff845d.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+ 
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3 fixed-top">
+      <div class="container">
+        <a class="navbar-brand white-text" href="#">African dish store</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarSupportedContent"
+        >
+          <ul class="navbar-nav mb-2 mb-lg-0 mr-auto">
+            <li class="nav-item">
+              <a
+                class="btn btn-primary me-3 active"
+                aria-current="page"
+                href="./index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="btn btn-primary me-3 position-relative"
+                href="./cart.html"
+                >Cart
+                <span
+                  id="badge"
+                  class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+                ></span
+              ></a>
+            </li>
+            <li class="nav-item">
+              <!-- Button trigger modal -->
+              <button
+                type="button"
+                class="btn btn-primary"
+                data-bs-toggle="modal"
+                data-bs-target="#addProductModal"
+              >
+                Add a product
+              </button>
 
-  <div class="navbar">
-  
-  <a href="#news" class="add " data-bs-toggle="modal" data-bs-target="#addFood">Add</a>
-  <a href="./cart.html">Cart</a>
-  <a href="./index.html" class="">Home</a>
-</div>
-
-  <h1> Food Store</h1>
-
-<div id="food"  ></div>
-
-<div class="modal fade" id="addFood" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              <!-- Modal -->
+              <div
+                class="modal fade"
+                id="addProductModal"
+                tabindex="-1"
+                aria-labelledby="exampleModalLabel"
+                aria-hidden="true"
+              >
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel">
+                        Add product
+                      </h5>
+                      <button
+                        type="button"
+                        class="btn-close"
+                        data-bs-dismiss="modal"
+                        aria-label="Close"
+                      ></button>
+                    </div>
+                    <div class="modal-body">
+                      <div class="mb-3">
+                        <label for="addTitle" class="form-label">Title</label>
+                        <input
+                          class="form-control"
+                          type="text"
+                          name="addTitle"
+                          id="addTitle"
+                        />
+                      </div>
+                      <div class="mb-3">
+                        <label for="" class="form-label">Category</label>
+                        <select
+                          class="form-select"
+                          name="addCategory"
+                          id="addCategory"
+                        >
+                          <option value="Meals">Meals</option>
+                          <option value="Salads">Salads</option>
+                          <option value="Meat">Meat</option>
+                        </select>
+                      </div>
+                      <div class="mb-3">
+                        <label for="addPrice" class="form-label">Price</label>
+                        <input
+                          class="form-control"
+                          type="text"
+                          name="addPrice"
+                          id="addPrice"
+                        />
+                      </div>
+                      <div class="mb-3">
+                        <label for="addImg" class="form-label">Image URL</label>
+                        <input
+                          class="form-control"
+                          type="text"
+                          name="addImg"
+                          id="addImg"
+                        />
+                      </div>
+                    </div>
+                    <div class="modal-footer">
+                      <button
+                        type="button"
+                        class="btn btn-secondary"
+                        data-bs-dismiss="modal"
+                      >
+                        Close
+                      </button>
+                      <button
+                        type="button"
+                        class="btn btn-primary"
+                        data-bs-dismiss="modal"
+                        onclick="createProduct()"
+                      >
+                        Create Product
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="modal-body">
-        
-
-        Title: <br>
-        <input type="text" placeholder="" id="addTitle"/>
-        <br>
- Price: <br>
-        <input type="text" placeholder="" id="addPrice">
-        <br>
-Catergory: <br>
-        <input type="text" placeholder="" id="addCatergory">
-        <br>
-Image url: <br>
-                <input type="text" placeholder="" id="addImage">
+    </nav>
+    <div class="container d-flex justify-content-end mb-3 mt-5 pt-4">
+      <div class="d-flex w-25 ms-3">
+        <label for="" class="form-label">Sort by category</label>
+        <select
+          class="form-select"
+          name=""
+          id="sortCategory"
+          onchange="sortCategory()"
+        >
+          <option value="All">All</option>
+          <option value="Meals">Meals</option>
+          <option value="Salads">Salads</option>
+          <option value="Meat">Meat</option>
+        </select>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addFood" onclick="addMeal()">Save changes</button>
+      <div class="d-flex w-25 ms-3">
+        <label for="" class="form-label">Sort name</label>
+        <select class="form-select" name="" id="sortName" onchange="sortName()">
+          <option value="ascending">Ascending</option>
+          <option value="descending">Descending</option>
+        </select>
+      </div>
+      <div class="d-flex w-25 ms-3">
+        <label for="" class="form-label success"> <b>Sort price</b> </label>
+        <select
+          class="form-select"
+          name=""
+          id="sortPrice"
+          onchange="sortPrice()"
+        >
+          <option value="ascending">Ascending</option>
+          <option value="descending">Descending</option>
+        </select>
       </div>
     </div>
-  </div>
-</div>
-    
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src='price.js'></script>
-
-</body>
+    <div id="products" class="container d-flex mb-3"></div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./price.js"></script>
+  </body>
 </html>
